--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "@types/bcrypt": "^6.0.0",
     "@types/cors": "^2.8.19",
     "@types/express": "^5.0.3",
+    "@types/multer": "^2.0.0",
     "bcrypt": "^6.0.0",
     "clsx": "^2.1.1",
     "cors": "^2.8.5",
@@ -27,6 +28,7 @@
     "dotenv": "^17.2.1",
     "express": "^5.1.0",
     "lucide-react": "^0.344.0",
+    "multer": "^2.0.2",
     "prisma": "^6.14.0",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
